--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <h1>INFORMATION</h1>    
                 </span> 
                 <nav>
-                    <a href="INTRO.html" target="_blank">
+                    <a href="intro1.html" target="_blank">
                         <img src="./intro.png" alt="intro" class="intro"></a>
                     <a href="PAGE 2.html" target="_blank">
                         <img src="./ranks.png" alt="ranks"></a>
