--- a/pdf.html
+++ b/pdf.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Displaying Images</title>
+  <title>AWARDS AND EVENTS</title>
 </head>
 <body bgcolor="black">
 	<center>
